fix(room-style): add margin to edit text placeholder for better spacing

--- a/static/room.css
+++ b/static/room.css
@@ -582,6 +582,9 @@ div.edit-room-name-box{
     margin-bottom: 30px;
     pointer-events: none;
 }
+.edit-text-place-holder{
+    margin-bottom: 20px;
+}
 
 #reply-box-close-btn,
 #edit-box-close-btn{
